--- a/stylesheets/example.css
+++ b/stylesheets/example.css
@@ -20,14 +20,15 @@
 #test {
   width: 100px;
   height: 100px;
+  border: 2px solid #29c03f;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
   border-radius: 50px;
-  -webkit-box-shadow: 1px 2px 3px blue;
-  -moz-box-shadow: 1px 2px 3px blue;
-  box-shadow: 1px 2px 3px blue;
-  background-image: -o-linear-gradient(bottom, green 20%, grey 80%);
-  background-image: -ms-linear-gradient(bottom, green 20%, grey 80%);
-  background-image: -webkit-linear-gradient(bottom, green 20%, grey 80%);
-  background-image: -moz-linear-gradient(bottom, green 20%, grey 80%);
-  background-image: linear-gradient(bottom, green 20%, grey 80%); }
+  -webkit-box-shadow: 1px 2px 30px #2957c0;
+  -moz-box-shadow: 1px 2px 30px #2957c0;
+  box-shadow: 1px 2px 30px #2957c0;
+  background-image: -o-linear-gradient(bottom, #c02929 20%, grey 80%);
+  background-image: -ms-linear-gradient(bottom, #c02929 20%, grey 80%);
+  background-image: -webkit-linear-gradient(bottom, #c02929 20%, grey 80%);
+  background-image: -moz-linear-gradient(bottom, #c02929 20%, grey 80%);
+  background-image: linear-gradient(bottom, #c02929 20%, grey 80%); }
