--- a/stylesheets/partials/_radial-gradient.scss
+++ b/stylesheets/partials/_radial-gradient.scss
@@ -1,7 +1,7 @@
-@mixin _radial-gradient($start, $end){
-  background-image: -o-radial-gradient(center, ellipse cover, $start, $end);
-  background-image: -ms-radial-gradient(center, ellipse cover, $start, $end);
-  background-image: -webkit-radial-gradient(center, ellipse cover, $start, $end);
-  background-image: -moz-radial-gradient(center, ellipse cover, $start, $end);
-  background-image: radial-gradient(center, ellipse cover, $start, $end);
+@mixin _radial-gradient($start, $end, $position: center, $form:ellipse cover){
+  background-image: -o-radial-gradient($position, $form, $start, $end);
+  background-image: -ms-radial-gradient($position, $form, $start, $end);
+  background-image: -webkit-radial-gradient($position, $form, $start, $end);
+  background-image: -moz-radial-gradient($position, $form, $start, $end);
+  background-image: radial-gradient($position, $form, $start, $end);
 }
